--- a/src/app/Juegos/ruleta/ruleta.component.html
+++ b/src/app/Juegos/ruleta/ruleta.component.html
@@ -1,1 +1,91 @@
-<p>hola</p>
+<!--Cabecera-->
+<header class="header">
+  <div class="logo">
+    <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
+  </div>
+  <nav class="nav-links">
+    <a routerLink="">Inicio</a>
+    <a routerLink="/Eleccion">Juegos</a>
+    <a routerLink="/Contacto">Contacto</a>
+  </nav>
+</header>
+<!--Fin Cabecera-->
+<!--Contenedor-->
+<div class="roulette-container">
+  <div class="roulette-wheel" [style.transform]="rotation">
+    <div
+      class="number"
+      *ngFor="let segment of segments; let i = index"
+      [style.transform]="getSegmentRotation(i)"
+      [class.red]="colors.red.includes(segment)"
+      [class.black]="colors.black.includes(segment)"
+    ></div>
+  </div>
+  <div class="betting-table">
+    <h3 class="table-title">Mesa de Apuestas</h3>
+    <div class="table-container">
+      <div class="bets">
+        <button
+          *ngFor="let num of segments"
+          (click)="placeBet('number', num)"
+          [class.selected]="isBetSelected('number', num)"
+          [class.red]="colors.red.includes(num)"
+          [class.black]="colors.black.includes(num)"
+        >
+          {{ num }}
+        </button>
+      </div>
+
+      <div class="bet-options">
+        <div class="color-options">
+          <button
+            (click)="placeBet('color', 'red')"
+            [class.selected]="isBetSelected('color', 'red')"
+            class="red"
+          >
+            Rojo
+          </button>
+          <button
+            (click)="placeBet('color', 'black')"
+            [class.selected]="isBetSelected('color', 'black')"
+            class="black"
+          >
+            Negro
+          </button>
+        </div>
+        <div class="parity-options">
+          <button
+            (click)="placeBet('parity', 'even')"
+            [class.selected]="isBetSelected('parity', 'even')"
+          >
+            Pares
+          </button>
+          <button
+            (click)="placeBet('parity', 'odd')"
+            [class.selected]="isBetSelected('parity', 'odd')"
+          >
+            Impares
+          </button>
+        </div>
+      </div>
+    </div>
+    <button class="spin-button" (click)="spin()">Girar Ruleta</button>
+    <p *ngIf="isSpinComplete" class="resultado">
+      El resultado es: {{ result }}
+    </p>
+    <p *ngIf="isSpinComplete" class="mensaje">{{ message }}</p>
+  </div>
+</div>
+<!--Fin de contenedor-->
+<!--Footer-->
+<footer class="footer">
+  <div class="footer-logo">
+    <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
+  </div>
+  <div class="footer-links">
+    <a routerLink="/AvisoLegal">Aviso Legal</a>
+    <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>
+    <a routerLink="/TerminosCondiciones">Términos y Condiciones</a>
+  </div>
+</footer>
+<!--Fin Footer-->
