--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -17,37 +17,44 @@
     <img src="../../assets/LogoCasino.png" class="headerlogo" alt="Logo del Casino" />
   </div>
   <nav class="nav-links">
-    <a routerLink="">Inicio</a>
-    <a routerLink="/Eleccion">Juegos</a>
+    <a routerLink="/Registro">Registrate</a>
     <a routerLink="/Contacto">Contacto</a>
   </nav>
 </header>
 <!--Fin Cabecera-->
 <!--Contenedor-->
 <div class="login-container">
-  <form>
+  <form [formGroup]="newloginForm" (ngSubmit)="entradalogin()">
     <h2>Iniciar Sesión</h2>
     <div>
-      <label for="email">Email:</label>
+      <label for="email">Correo:</label>
       <input
         type="email"
         id="email"
-        name="email"
-        placeholder="Ingresa tu email"
+        formControlName="Correo"
+        placeholder="Ingresa tu correo"
         required
       />
+      <div *ngIf="correo?.invalid && correo?.touched" class="error">
+        El correo es obligatorio y debe ser un formato válido.
+      </div>
     </div>
+  
     <div>
       <label for="password">Contraseña:</label>
       <input
         type="password"
         id="password"
-        name="password"
+        formControlName="Passwrd"
         placeholder="Ingresa tu contraseña"
         required
       />
+      <div *ngIf="passwrd?.invalid && passwrd?.touched" class="error">
+        La contraseña es obligatoria.
+      </div>
     </div>
-    <button type="submit">Iniciar sesión</button>
+  
+    <button type="submit" [disabled]="newloginForm.invalid">Iniciar sesión</button>
   </form>
 </div>
 <!--Fin Contenedor-->
