--- a/src/app/terminos-condiciones/terminos-condiciones.component.html
+++ b/src/app/terminos-condiciones/terminos-condiciones.component.html
@@ -5,7 +5,7 @@
   </div>
   <nav class="nav-links">
     <a routerLink="">Inicio</a>
-    <a routerLink="/Eleccion">Juegos</a>
+    <a routerLink="/Registro">Registrate</a>
     <a routerLink="/Contacto">Contacto</a>
   </nav>
 </header>
