--- a/src/app/actualizar/actualizar.component.scss
+++ b/src/app/actualizar/actualizar.component.scss
@@ -34,13 +34,67 @@
   .nav-links a:hover {
     color: #00ffff;
   }
+
+  /* Estilo para el área de bienvenida del usuario */
+.user-greeting {
+  color: #0fbcf9;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+}
+
+.user-greeting span {
+  margin-right: 10px;
+}
+
+.dropdown {
+  position: absolute;
+  top: 55px;
+  right: 0;
+  background-color: #2c3e50;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  min-width: 200px;
+  width: auto;
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
+}
+
+.dropdown.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s;
+}
+
+.dropdown .logout-button {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  display: block;
+}
+
+.dropdown .logout-button:hover {
+  background-color: #c0392b;
+}
   
   body {
     margin-top: 70px;
   }
 
   /*Estlo contenedor login*/
-.registro-container {
+.actualizar-container {
     height: 100vh;
     width: 100vw;
     background-image: url("../../assets/FondoFormulario.jpg");
@@ -112,55 +166,7 @@
   form button:hover {
     background-color: #0c9afc;
     box-shadow: 0 0 15px rgba(0, 153, 255, 0.9);
-  }
-  
-  .obligatorio {
-    color: red;
-    font-weight: bold;
-  }
-  
-  /* Estilo para los checkboxes */
-  .checkbox-group label {
-    align-items: center;
-    color: #fff;
-    font-size: 16px;
-  }
-  
-  .checkbox-group input {
-    margin-right: 10px;
-    width: 18px;
-    height: 18px;
-    border-radius: 3px;
-    border: 2px solid #0fbcf9;
-    cursor: pointer;
-  }
-  
-  .checkbox-group input:checked {
-    background-color: #0fbcf9;
-    border-color: #0fbcf9;
-  }
-  
-  .checkbox-group input:focus {
-    outline: none;
-    box-shadow: 0 0 5px rgba(0, 153, 255, 0.7);
-  }
-  
-  /* Error message */
-  .error {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
-  }
-  
-  a {
-    color: #0fbcf9;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-    
+  } 
 
   /* Estilo general del footer */
 .footer {
