--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -12,6 +12,7 @@
   <!--Contenedor-->
   <div class="registro-container">
     <form (ngSubmit)="enviarFormulario()" [formGroup]="registroForm">
+      <!-- Nombre de usuario -->
       <div class="form-group">
         <label for="name">Nombre de usuario: <span class="obligatorio">*</span></label>
         <input
@@ -27,6 +28,7 @@
         </div>
       </div>
     
+      <!-- Contraseña -->
       <div class="form-group">
         <label for="password">Contraseña: <span class="obligatorio">*</span></label>
         <input
@@ -42,6 +44,7 @@
         </div>
       </div>
     
+      <!-- Fecha de Nacimiento -->
       <div class="form-group">
         <label for="birthdate">Fecha de Nacimiento: <span class="obligatorio">*</span></label>
         <input
@@ -59,6 +62,7 @@
         </div>
       </div>
     
+      <!-- Correo Electrónico -->
       <div class="form-group">
         <label for="email">Correo Electrónico: <span class="obligatorio">*</span></label>
         <input
@@ -74,10 +78,43 @@
         </div>
       </div>
     
+      <!-- Checkbox: Mayor de edad -->
+      <div class="form-group checkbox-group">
+        <label>
+          <input
+            type="checkbox"
+            formControlName="mayorEdad"
+            [checked]="registroForm.get('mayorEdad')?.value"
+            required
+          />
+          Confirmo que soy mayor de 18 años.
+        </label>
+        <div class="error" *ngIf="registroForm.get('mayorEdad')?.invalid && registroForm.get('mayorEdad')?.touched">
+          Debes confirmar que eres mayor de edad.
+        </div>
+      </div>
+    
+      <!-- Checkbox: Aceptar Políticas de Privacidad -->
+      <div class="form-group checkbox-group">
+        <label>
+          <input
+            type="checkbox"
+            formControlName="aceptarPoliticas"
+            [checked]="registroForm.get('aceptarPoliticas')?.value"
+            required
+          />
+          Acepto las <a routerLink="/PoliticaPrivacidad" target="_blank">políticas de privacidad</a>.
+        </label>
+        <div class="error" *ngIf="registroForm.get('aceptarPoliticas')?.invalid && registroForm.get('aceptarPoliticas')?.touched">
+          Debes aceptar las políticas de privacidad.
+        </div>
+      </div>
+    
+      <!-- Botón de Enviar -->
       <button type="submit" class="btn btn-primary" [disabled]="registroForm.invalid">
         Registrarse
       </button>
-    </form>    
+    </form>        
   </div>
   <!--Fin Contenedor-->
   <!--Footer-->
