Casino Rubén Fernández

--- a/src/app/actualizar/actualizar.component.html
+++ b/src/app/actualizar/actualizar.component.html
@@ -20,6 +20,7 @@
   <!--Contenedor-->
   <div class="actualizar-container">
     <form>
+      <h3 style="text-align: center;">Actualice los datos correspondientes.</h3>
       <div class="form-group">
         <label for="name">Nombre de usuario:</label>
         <input
