--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,131 +1,188 @@
 <!--Cabecera-->
 <header class="header">
-    <div class="logo">
-      <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
-    </div>
-    <nav class="nav-links">
-      <a routerLink="">Inicio</a>
-      <a routerLink="/Contacto">Contacto</a>
-    </nav>
-  </header>
-  <!--Fin Cabecera-->
-  <!--Contenedor-->
-  <div class="registro-container">
-    <form (ngSubmit)="enviarFormulario()" [formGroup]="registroForm">
-      <!-- Nombre de usuario -->
-      <div class="form-group">
-        <label for="name">Nombre de usuario: <span class="obligatorio">*</span></label>
-        <input
-          id="name"
-          formControlName="usuario"
-          type="text"
-          class="form-control"
-          placeholder="Ingrese su nombre de usuario"
-          required
-        />
-        <div class="error" *ngIf="registroForm.get('usuario')?.invalid && registroForm.get('usuario')?.touched">
-          El nombre es obligatorio.
-        </div>
-      </div>
-    
-      <!-- Contraseña -->
-      <div class="form-group">
-        <label for="password">Contraseña: <span class="obligatorio">*</span></label>
-        <input
-          id="password"
-          formControlName="password"
-          type="password"
-          class="form-control"
-          placeholder="Ingrese su contraseña"
-          required
-        />
-        <div class="error" *ngIf="registroForm.get('password')?.invalid && registroForm.get('password')?.touched">
-          La contraseña debe tener al menos 6 caracteres.
-        </div>
-      </div>
-    
-      <!-- Fecha de Nacimiento -->
-      <div class="form-group">
-        <label for="birthdate">Fecha de Nacimiento: <span class="obligatorio">*</span></label>
-        <input
-          id="birthdate"
-          formControlName="fechaNacimiento"
-          type="date"
-          class="form-control"
-          required
-        />
-        <div class="error" *ngIf="registroForm.get('fechaNacimiento')?.invalid && registroForm.get('fechaNacimiento')?.touched">
-          La fecha de nacimiento es obligatoria.
-        </div>
-        <div class="error" *ngIf="registroForm.get('fechaNacimiento')?.hasError('edadInvalida') && registroForm.get('fechaNacimiento')?.touched">
-          Debes ser mayor de 18 años para registrarte.
-        </div>
-      </div>
-    
-      <!-- Correo Electrónico -->
-      <div class="form-group">
-        <label for="email">Correo Electrónico: <span class="obligatorio">*</span></label>
-        <input
-          id="email"
-          formControlName="correo"
-          type="email"
-          class="form-control"
-          placeholder="Ingrese su correo electrónico"
-          required
-        />
-        <div class="error" *ngIf="registroForm.get('correo')?.invalid && registroForm.get('correo')?.touched">
-          Ingrese un correo válido.
-        </div>
-      </div>
-    
-      <!-- Checkbox: Mayor de edad -->
-      <div class="form-group checkbox-group">
-        <label>
-          <input
-            type="checkbox"
-            formControlName="mayorEdad"
-            [checked]="registroForm.get('mayorEdad')?.value"
-            required
-          />
-          Confirmo que soy mayor de 18 años.
-        </label>
-        <div class="error" *ngIf="registroForm.get('mayorEdad')?.invalid && registroForm.get('mayorEdad')?.touched">
-          Debes confirmar que eres mayor de edad.
-        </div>
-      </div>
-    
-      <!-- Checkbox: Aceptar Políticas de Privacidad -->
-      <div class="form-group checkbox-group">
-        <label>
-          <input
-            type="checkbox"
-            formControlName="aceptarPoliticas"
-            [checked]="registroForm.get('aceptarPoliticas')?.value"
-            required
-          />
-          Acepto las <a routerLink="/PoliticaPrivacidad" target="_blank">políticas de privacidad</a>.
-        </label>
-        <div class="error" *ngIf="registroForm.get('aceptarPoliticas')?.invalid && registroForm.get('aceptarPoliticas')?.touched">
-          Debes aceptar las políticas de privacidad.
-        </div>
-      </div>
-    
-      <!-- Botón de Enviar -->
-      <button type="submit" class="btn btn-primary" [disabled]="registroForm.invalid">
-        Registrarse
-      </button>
-    </form>        
+  <div class="logo">
+    <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
   </div>
-  <!--Fin Contenedor-->
-  <!--Footer-->
+  <nav class="nav-links">
+    <a routerLink="">Inicio</a>
+    <a routerLink="/Contacto">Contacto</a>
+  </nav>
+</header>
+<!--Fin Cabecera-->
+<!--Contenedor-->
+<div class="registro-container">
+  <form (ngSubmit)="enviarFormulario()" [formGroup]="registroForm">
+    <!-- Nombre de usuario -->
+    <div class="form-group">
+      <label for="name"
+        >Nombre de usuario: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="name"
+        formControlName="usuario"
+        type="text"
+        class="form-control"
+        placeholder="Ingrese su nombre de usuario"
+        required
+      />
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('usuario')?.invalid &&
+          registroForm.get('usuario')?.touched
+        "
+      >
+        El nombre es obligatorio.
+      </div>
+    </div>
+
+    <!-- Contraseña -->
+    <div class="form-group">
+      <label for="password"
+        >Contraseña: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="password"
+        formControlName="password"
+        type="password"
+        class="form-control"
+        placeholder="Ingrese su contraseña"
+        required
+      />
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('password')?.invalid &&
+          registroForm.get('password')?.touched
+        "
+      >
+        La contraseña debe tener al menos 6 caracteres.
+      </div>
+    </div>
+
+    <!-- Fecha de Nacimiento -->
+    <div class="form-group">
+      <label for="birthdate"
+        >Fecha de Nacimiento: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="birthdate"
+        formControlName="fechaNacimiento"
+        type="date"
+        class="form-control"
+        required
+      />
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('fechaNacimiento')?.invalid &&
+          registroForm.get('fechaNacimiento')?.touched
+        "
+      >
+        La fecha de nacimiento es obligatoria.
+      </div>
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('fechaNacimiento')?.hasError('edadInvalida') &&
+          registroForm.get('fechaNacimiento')?.touched
+        "
+      >
+        Debes ser mayor de 18 años para registrarte.
+      </div>
+    </div>
+
+    <!-- Correo Electrónico -->
+    <div class="form-group">
+      <label for="email"
+        >Correo Electrónico: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="email"
+        formControlName="correo"
+        type="email"
+        class="form-control"
+        placeholder="Ingrese su correo electrónico"
+        required
+      />
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('correo')?.invalid &&
+          registroForm.get('correo')?.touched
+        "
+      >
+        Ingrese un correo válido.
+      </div>
+    </div>
+
+    <!-- Checkbox: Mayor de edad -->
+    <div class="form-group checkbox-group">
+      <label>
+        <input
+          type="checkbox"
+          formControlName="mayorEdad"
+          [checked]="registroForm.get('mayorEdad')?.value"
+          required
+        />
+        Confirmo que soy mayor de 18 años.
+      </label>
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('mayorEdad')?.invalid &&
+          registroForm.get('mayorEdad')?.touched
+        "
+      >
+        Debes confirmar que eres mayor de edad.
+      </div>
+    </div>
+
+    <!-- Checkbox: Aceptar Políticas de Privacidad -->
+    <div class="form-group checkbox-group">
+      <label>
+        <input
+          type="checkbox"
+          formControlName="aceptarPoliticas"
+          [checked]="registroForm.get('aceptarPoliticas')?.value"
+          required
+        />
+        Acepto las
+        <a routerLink="/PoliticaPrivacidad" target="_blank"
+          >políticas de privacidad</a
+        >.
+      </label>
+      <div
+        class="error"
+        *ngIf="
+          registroForm.get('aceptarPoliticas')?.invalid &&
+          registroForm.get('aceptarPoliticas')?.touched
+        "
+      >
+        Debes aceptar las políticas de privacidad.
+      </div>
+    </div>
+
+    <!-- Botón de Enviar -->
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="registroForm.invalid"
+    >
+      Registrarse
+    </button>
+  </form>
+</div>
+<!--Fin Contenedor-->
+<!--Footer-->
 <footer class="footer">
-    <div class="footer-logo">
-      <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
-    </div>
-    <div class="footer-links">
-      <a routerLink="/AvisoLegal">Aviso Legal</a>
-      <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>
-      <a routerLink="/TerminosCondiciones">Términos y Condiciones</a>
-    </div>
-  </footer>
-  <!--Fin Footer-->
+  <div class="footer-logo">
+    <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
+  </div>
+  <div class="footer-links">
+    <a routerLink="/AvisoLegal">Aviso Legal</a>
+    <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>
+    <a routerLink="/TerminosCondiciones">Términos y Condiciones</a>
+  </div>
+</footer>
+<!--Fin Footer-->
