--- a/src/app/Juegos/ruleta/ruleta.component.scss
+++ b/src/app/Juegos/ruleta/ruleta.component.scss
@@ -199,8 +199,8 @@ body {
 /* Opciones de rango (Primeros 12, Segundos 12, Terceros 12) */
 .range-options {
   display: flex;
-  gap: 20px; 
-  margin-top: 15px; 
+  gap: 20px;
+  margin-top: 15px;
   margin-bottom: 20px;
 }
 
@@ -211,7 +211,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   color: white;
-  background-color: #333;;
+  background-color: #333;
   border: 1px solid gray;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
