--- a/src/app/borrar/borrar.component.html
+++ b/src/app/borrar/borrar.component.html
@@ -1,87 +1,102 @@
 <!--Cabecera-->
 <header class="header">
-    <div class="logo">
-      <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
-    </div>
-    <nav class="nav-links">
-      <a routerLink="/Eleccion">Juegos</a>
-      <a routerLink="/Actualizar">Actualizar cuenta</a>
-      <a routerLink="/Contacto">Contacto</a>
-      <!-- Área que contiene el saludo y el desplegable de sesión -->
+  <div class="logo">
+    <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
+  </div>
+  <nav class="nav-links">
+    <a routerLink="/Eleccion">Juegos</a>
+    <a routerLink="/Actualizar">Actualizar cuenta</a>
+    <a routerLink="/Contacto">Contacto</a>
+    <!-- Área que contiene el saludo y el desplegable de sesión -->
     <div class="user-greeting" (click)="toggleDropdown()">
       <span *ngIf="usuario">Hola, {{ usuario }}</span>
-      <div [ngClass]="{ 'show': dropdownVisible }" class="dropdown">
+      <div [ngClass]="{ show: dropdownVisible }" class="dropdown">
         <span class="logout-button" (click)="logout()">Cerrar sesión</span>
-        </div>
       </div>
-    </nav>
-  </header>
-  <!--Fin Cabecera-->
-  <!--Contenedor-->
-  <div class="actualizar-container">
-    <form (ngSubmit)="enviarFormulario()" [formGroup]="borrarForm">
-      <h2 style="text-align: center;">Lamentamos que se vaya, le echaremos de menos.</h2>
-      <h3 style="text-align: center;"> Introduzca sus datos para poder eliminar su cuenta.</h3>
-        <div class="form-group">
-            <label for="email">Correo Electrónico:</label>
-            <input
-              id="email"
-              formControlName="correo"
-              type="email"
-              class="form-control"
-              placeholder="Actualice su correo electrónico"
-              required
-            />
-          </div>
-      <div class="form-group">
-        <label for="name">Nombre de usuario:</label>
-        <input
-          id="name"
-          formControlName="usuario"
-          type="text"
-          class="form-control"
-          placeholder="Actualice su nombre de usuario"
-          required
-        />
-      </div>
-    
-      <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input
-          id="password"
-          formControlName="password"
-          type="password"
-          class="form-control"
-          placeholder="Actualice su contraseña"
-          required
-        />
-      </div>
-      <!-- Fecha de Nacimiento -->
-      <div class="form-group">
-        <label for="birthdate">Fecha de Nacimiento:</label>
-        <input
-          id="birthdate"
-          formControlName="fechaNacimiento"
-          type="date"
-          class="form-control"
-          required
-        />
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="borrarForm.invalid">
-        Borrar
-      </button>
-    </form>    
-  </div>
-  <!--Fin Contenedor-->
-  <!--Footer-->
+    </div>
+  </nav>
+</header>
+<!--Fin Cabecera-->
+<!--Contenedor-->
+<div class="borrar-container">
+  <form (ngSubmit)="enviarFormulario()" [formGroup]="borrarForm">
+    <h2 style="text-align: center">
+      Lamentamos que se vaya, le echaremos de menos.
+    </h2>
+    <h3 style="text-align: center">
+      Introduzca sus datos para poder eliminar su cuenta.
+    </h3>
+    <div class="form-group">
+      <label for="email"
+        >Correo Electrónico: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="email"
+        formControlName="correo"
+        type="email"
+        class="form-control"
+        placeholder="Introduzca su correo electrónico"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <label for="name"
+        >Nombre de usuario: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="usuario"
+        type="text"
+        formControlName="usuario"
+        class="form-control"
+        placeholder="Introduzca su nombre de usuario"
+        readonly
+      />
+    </div>
+    <div class="form-group">
+      <label for="password"
+        >Contraseña: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="password"
+        formControlName="password"
+        type="password"
+        class="form-control"
+        placeholder="Introduzca su contraseña"
+        required
+      />
+    </div>
+    <!-- Fecha de Nacimiento -->
+    <div class="form-group">
+      <label for="birthdate"
+        >Fecha de Nacimiento: <span class="obligatorio">*</span></label
+      >
+      <input
+        id="birthdate"
+        formControlName="fechaNacimiento"
+        type="date"
+        class="form-control"
+        required
+      />
+    </div>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="borrarForm.invalid"
+    >
+      Borrar
+    </button>
+  </form>
+</div>
+<!--Fin Contenedor-->
+<!--Footer-->
 <footer class="footer">
-    <div class="footer-logo">
-      <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
-    </div>
-    <div class="footer-links">
-      <a routerLink="/AvisoLegal">Aviso Legal</a>
-      <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>
-      <a routerLink="/TerminosCondiciones">Términos y Condiciones</a>
-    </div>
-  </footer>
-  <!--Fin Footer-->
+  <div class="footer-logo">
+    <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
+  </div>
+  <div class="footer-links">
+    <a routerLink="/AvisoLegal">Aviso Legal</a>
+    <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>
+    <a routerLink="/TerminosCondiciones">Términos y Condiciones</a>
+  </div>
+</footer>
+<!--Fin Footer-->
