--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -4,7 +4,11 @@
 <!-- Banner de Cookies -->
 <div class="cookie-banner" *ngIf="showCookieBanner">
   <div class="cookie-content">
-    <p>Usamos cookies para mejorar tu experiencia en el sitio. Al aceptar, consientes el uso de cookies según nuestra <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>.</p>
+    <p>
+      Usamos cookies para mejorar tu experiencia en el sitio. Al aceptar,
+      consientes el uso de cookies según nuestra
+      <a routerLink="/PoliticaPrivacidad">Política de Privacidad</a>.
+    </p>
     <div class="cookie-buttons">
       <button (click)="acceptCookies()">Aceptar</button>
       <button (click)="declineCookies()">Rechazar</button>
@@ -14,11 +18,14 @@
 <!--Cabecera-->
 <header class="header">
   <div class="logo">
-    <img src="../../assets/LogoCasino.png" class="headerlogo" alt="Logo del Casino" />
+    <img
+      src="../../assets/LogoCasino.png"
+      class="headerlogo"
+      alt="Logo del Casino"
+    />
   </div>
   <nav class="nav-links">
     <a routerLink="/Registro">Registrate</a>
-    <a routerLink="/Contacto">Contacto</a>
   </nav>
 </header>
 <!--Fin Cabecera-->
@@ -39,7 +46,7 @@
         El correo es obligatorio y debe ser un formato válido.
       </div>
     </div>
-  
+
     <div>
       <label for="password">Contraseña:</label>
       <input
@@ -53,15 +60,21 @@
         La contraseña es obligatoria.
       </div>
     </div>
-  
-    <button type="submit" [disabled]="newloginForm.invalid">Iniciar sesión</button>
+
+    <button type="submit" [disabled]="newloginForm.invalid">
+      Iniciar sesión
+    </button>
   </form>
 </div>
 <!--Fin Contenedor-->
 <!--Footer-->
 <footer class="footer">
   <div class="footer-logo">
-    <img src="../../assets/LogoCasino.png" class="footerlogo" alt="Logo del Casino" />
+    <img
+      src="../../assets/LogoCasino.png"
+      class="footerlogo"
+      alt="Logo del Casino"
+    />
   </div>
   <div class="footer-links">
     <a routerLink="/AvisoLegal">Aviso Legal</a>
