--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -14,7 +14,7 @@
 
 .header .logo img {
   width: 100px;
-  height: auto; 
+  height: auto;
 }
 
 .nav-links {
@@ -129,7 +129,7 @@ form button:hover {
 /* Logo en el centro */
 .footer-logo img {
   width: 150px;
-  height: auto; 
+  height: auto;
 }
 
 /* Enlaces en el footer */
@@ -172,13 +172,12 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.8); 
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 20px;
   text-align: center;
   z-index: 9999;
 }
-
 
 .cookie-content {
   display: flex;
@@ -186,13 +185,12 @@ body {
   align-items: center;
 }
 
-
 .cookie-buttons {
   margin-top: 10px;
 }
 
 .cookie-buttons button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: 2px solid #3e8e41;
   padding: 10px 20px;
@@ -201,13 +199,13 @@ body {
   border-radius: 8px;
   font-size: 16px;
   text-transform: uppercase;
-  box-shadow: 0 0 8px #4CAF50, 0 0 12px #4CAF50;
+  box-shadow: 0 0 8px #4caf50, 0 0 12px #4caf50;
   transition: all 0.3s ease-in-out;
 }
 
 .cookie-buttons button:hover {
   background-color: #45a049;
-  box-shadow: 0 0 15px #00FF00, 0 0 25px #00FF00;
+  box-shadow: 0 0 15px #00ff00, 0 0 25px #00ff00;
   transform: scale(1.05);
 }
 
@@ -219,10 +217,6 @@ body {
 
 .cookie-buttons button:last-child:hover {
   background-color: #e53935;
-  box-shadow: 0 0 15px #FF6347, 0 0 25px #FF6347;
+  box-shadow: 0 0 15px #ff6347, 0 0 25px #ff6347;
   transform: scale(1.05);
 }
-
-
-
-
