--- a/src/app/actualizar/actualizar.component.html
+++ b/src/app/actualizar/actualizar.component.html
@@ -19,16 +19,19 @@
 <!--Fin Cabecera-->
 <!--Contenedor-->
 <div class="actualizar-container">
-  <form>
+  <form [formGroup]="actualizarForm" (ngSubmit)="actualizarUsuario()">
     <h3 style="text-align: center">Actualice los datos correspondientes.</h3>
+
     <div class="form-group">
       <label for="name">Nombre de usuario:</label>
       <input
         id="name"
         type="text"
+        formControlName="Usuario"
         class="form-control"
-        placeholder="Actualice su nombre de usuario"
-        required
+        placeholder="Introduzca su nombre de usuario"
+        [value]="usuario"
+        readonly
       />
     </div>
 
@@ -38,22 +41,31 @@
         id="password"
         type="password"
         class="form-control"
+        formControlName="Passwrd"
         placeholder="Actualice su contraseña"
         required
       />
     </div>
+
     <div class="form-group">
       <label for="email">Correo Electrónico:</label>
       <input
         id="email"
         type="email"
         class="form-control"
+        formControlName="Correo"
         placeholder="Actualice su correo electrónico"
         required
       />
     </div>
 
-    <button type="submit" class="btn btn-primary">Actualizar</button>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="actualizarForm.invalid"
+    >
+      Actualizar
+    </button>
   </form>
 </div>
 <!--Fin Contenedor-->
