Casino Rubén Fernández

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -4,7 +4,7 @@
     <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
   </div>
   <nav class="nav-links">
-    <a routerLink="/Juegos">Juegos</a>
+    <a routerLink="/Eleccion">Juegos</a>
     <a routerLink="/Actualizar">Actualizar cuenta</a>
     <a routerLink="/Borrar">Borrar Cuenta</a>
     <!-- Área que contiene el saludo y el desplegable de sesión -->
