--- a/src/app/Juegos/tragaperras/tragaperras.component.html
+++ b/src/app/Juegos/tragaperras/tragaperras.component.html
@@ -4,9 +4,17 @@
     <img src="../../assets/LogoCasino.png" alt="Logo del Casino" />
   </div>
   <nav class="nav-links">
-    <a routerLink="">Inicio</a>
     <a routerLink="/Eleccion">Juegos</a>
+    <a routerLink="/Actualizar">Actualizar cuenta</a>
+    <a routerLink="/Borrar">Borrar Cuenta</a>
     <a routerLink="/Contacto">Contacto</a>
+    <!-- Área que contiene el saludo y el desplegable de sesión -->
+    <div class="user-greeting" (click)="toggleDropdown()">
+      <span *ngIf="usuario">Hola, {{ usuario }}</span>
+      <div [ngClass]="{ show: dropdownVisible }" class="dropdown">
+        <span class="logout-button" (click)="logout()">Cerrar sesión</span>
+      </div>
+    </div>
   </nav>
 </header>
 <!--Fin Cabecera-->
