--- a/src/app/Juegos/tragaperras/tragaperras.component.scss
+++ b/src/app/Juegos/tragaperras/tragaperras.component.scss
@@ -35,6 +35,60 @@
   color: #00ffff;
 }
 
+/* Estilo para el área de bienvenida del usuario */
+.user-greeting {
+  color: #0fbcf9;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+}
+
+.user-greeting span {
+  margin-right: 10px;
+}
+
+.dropdown {
+  position: absolute;
+  top: 55px;
+  right: 0;
+  background-color: #2c3e50;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  min-width: 200px;
+  width: auto;
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
+}
+
+.dropdown.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s;
+}
+
+.dropdown .logout-button {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  display: block;
+}
+
+.dropdown .logout-button:hover {
+  background-color: #c0392b;
+}
+
 body {
   margin-top: 70px;
 }
